--- a/Nimbyx.Dental/Web.config
+++ b/Nimbyx.Dental/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Nimbyx.Dental-20151227010358.mdf;Initial Catalog=aspnet-Nimbyx.Dental-20151227010358;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="nimbyxdataEntities" connectionString="metadata=res://*/NimbyxDataModel.csdl|res://*/NimbyxDataModel.ssdl|res://*/NimbyxDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sol-pc\sqlexpress;attachdbfilename=|DataDirectory|\nimbyxdata.mdf;integrated security=True;User Instance=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
